# xserve-frontpanel

./: CMakeLists.txt  README.md  cpu_usage.c  cpu_usage.h  cpu_usage_mach.c  cpu_usage_procfs.c  cpu_usage_random.c  hwmond.c
udev/: 98-apple-xserve-frontpanel.rules
